src/parser/MYSQLParser.cc

// Generated from MYSQL.g4 by ANTLR 4.7


#include "MYSQLListener.h"
#include "MYSQLVisitor.h"

#include "MYSQLParser.h"


using namespace antlrcpp;
using namespace antlr4;

MYSQLParser::MYSQLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MYSQLParser::~MYSQLParser() {
  delete _interpreter;
}

std::string MYSQLParser::getGrammarFileName() const {
  return "MYSQL.g4";
}

const std::vector<std::string>& MYSQLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MYSQLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

MYSQLParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MYSQLParser::ProgramContext::EOF() {
  return getToken(MYSQLParser::EOF, 0);
}

std::vector<MYSQLParser::StatementContext *> MYSQLParser::ProgramContext::statement() {
  return getRuleContexts<MYSQLParser::StatementContext>();
}

MYSQLParser::StatementContext* MYSQLParser::ProgramContext::statement(size_t i) {
  return getRuleContext<MYSQLParser::StatementContext>(i);
}


size_t MYSQLParser::ProgramContext::getRuleIndex() const {
  return MYSQLParser::RuleProgram;
}

void MYSQLParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void MYSQLParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any MYSQLParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MYSQLParser::ProgramContext* MYSQLParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MYSQLParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MYSQLParser::T__1)
      | (1ULL << MYSQLParser::T__3)
      | (1ULL << MYSQLParser::T__4)
      | (1ULL << MYSQLParser::T__6)
      | (1ULL << MYSQLParser::T__9)
      | (1ULL << MYSQLParser::T__14)
      | (1ULL << MYSQLParser::T__17)
      | (1ULL << MYSQLParser::T__19)
      | (1ULL << MYSQLParser::T__22)
      | (1ULL << MYSQLParser::T__24)
      | (1ULL << MYSQLParser::T__26)
      | (1ULL << MYSQLParser::T__31))) != 0) || _la == MYSQLParser::Null

    || _la == MYSQLParser::Annotation) {
      setState(46);
      statement();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(52);
    match(MYSQLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MYSQLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MYSQLParser::Db_statementContext* MYSQLParser::StatementContext::db_statement() {
  return getRuleContext<MYSQLParser::Db_statementContext>(0);
}

MYSQLParser::Io_statementContext* MYSQLParser::StatementContext::io_statement() {
  return getRuleContext<MYSQLParser::Io_statementContext>(0);
}

MYSQLParser::Table_statementContext* MYSQLParser::StatementContext::table_statement() {
  return getRuleContext<MYSQLParser::Table_statementContext>(0);
}

MYSQLParser::Alter_statementContext* MYSQLParser::StatementContext::alter_statement() {
  return getRuleContext<MYSQLParser::Alter_statementContext>(0);
}

tree::TerminalNode* MYSQLParser::StatementContext::Annotation() {
  return getToken(MYSQLParser::Annotation, 0);
}

tree::TerminalNode* MYSQLParser::StatementContext::Null() {
  return getToken(MYSQLParser::Null, 0);
}


size_t MYSQLParser::StatementContext::getRuleIndex() const {
  return MYSQLParser::RuleStatement;
}

void MYSQLParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void MYSQLParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any MYSQLParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

MYSQLParser::StatementContext* MYSQLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, MYSQLParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(54);
      db_statement();
      setState(55);
      match(MYSQLParser::T__0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(57);
      io_statement();
      setState(58);
      match(MYSQLParser::T__0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(60);
      table_statement();
      setState(61);
      match(MYSQLParser::T__0);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(63);
      alter_statement();
      setState(64);
      match(MYSQLParser::T__0);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(66);
      match(MYSQLParser::Annotation);
      setState(67);
      match(MYSQLParser::T__0);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(68);
      match(MYSQLParser::Null);
      setState(69);
      match(MYSQLParser::T__0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Db_statementContext ------------------------------------------------------------------

MYSQLParser::Db_statementContext::Db_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MYSQLParser::Db_statementContext::getRuleIndex() const {
  return MYSQLParser::RuleDb_statement;
}

void MYSQLParser::Db_statementContext::copyFrom(Db_statementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Show_dbsContext ------------------------------------------------------------------

MYSQLParser::Show_dbsContext::Show_dbsContext(Db_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Show_dbsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterShow_dbs(this);
}
void MYSQLParser::Show_dbsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitShow_dbs(this);
}

antlrcpp::Any MYSQLParser::Show_dbsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitShow_dbs(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Drop_dbContext ------------------------------------------------------------------

tree::TerminalNode* MYSQLParser::Drop_dbContext::Identifier() {
  return getToken(MYSQLParser::Identifier, 0);
}

MYSQLParser::Drop_dbContext::Drop_dbContext(Db_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Drop_dbContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDrop_db(this);
}
void MYSQLParser::Drop_dbContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDrop_db(this);
}

antlrcpp::Any MYSQLParser::Drop_dbContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitDrop_db(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Show_tablesContext ------------------------------------------------------------------

MYSQLParser::Show_tablesContext::Show_tablesContext(Db_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Show_tablesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterShow_tables(this);
}
void MYSQLParser::Show_tablesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitShow_tables(this);
}

antlrcpp::Any MYSQLParser::Show_tablesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitShow_tables(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Create_dbContext ------------------------------------------------------------------

tree::TerminalNode* MYSQLParser::Create_dbContext::Identifier() {
  return getToken(MYSQLParser::Identifier, 0);
}

MYSQLParser::Create_dbContext::Create_dbContext(Db_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Create_dbContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreate_db(this);
}
void MYSQLParser::Create_dbContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreate_db(this);
}

antlrcpp::Any MYSQLParser::Create_dbContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitCreate_db(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Use_dbContext ------------------------------------------------------------------

tree::TerminalNode* MYSQLParser::Use_dbContext::Identifier() {
  return getToken(MYSQLParser::Identifier, 0);
}

MYSQLParser::Use_dbContext::Use_dbContext(Db_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Use_dbContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUse_db(this);
}
void MYSQLParser::Use_dbContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUse_db(this);
}

antlrcpp::Any MYSQLParser::Use_dbContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitUse_db(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Show_indexesContext ------------------------------------------------------------------

MYSQLParser::Show_indexesContext::Show_indexesContext(Db_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Show_indexesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterShow_indexes(this);
}
void MYSQLParser::Show_indexesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitShow_indexes(this);
}

antlrcpp::Any MYSQLParser::Show_indexesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitShow_indexes(this);
  else
    return visitor->visitChildren(this);
}
MYSQLParser::Db_statementContext* MYSQLParser::db_statement() {
  Db_statementContext *_localctx = _tracker.createInstance<Db_statementContext>(_ctx, getState());
  enterRule(_localctx, 4, MYSQLParser::RuleDb_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(86);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<Db_statementContext *>(_tracker.createInstance<MYSQLParser::Create_dbContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(72);
      match(MYSQLParser::T__1);
      setState(73);
      match(MYSQLParser::T__2);
      setState(74);
      match(MYSQLParser::Identifier);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<Db_statementContext *>(_tracker.createInstance<MYSQLParser::Drop_dbContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(75);
      match(MYSQLParser::T__3);
      setState(76);
      match(MYSQLParser::T__2);
      setState(77);
      match(MYSQLParser::Identifier);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<Db_statementContext *>(_tracker.createInstance<MYSQLParser::Show_dbsContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(78);
      match(MYSQLParser::T__4);
      setState(79);
      match(MYSQLParser::T__5);
      break;
    }

    case 4: {
      _localctx = dynamic_cast<Db_statementContext *>(_tracker.createInstance<MYSQLParser::Use_dbContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(80);
      match(MYSQLParser::T__6);
      setState(81);
      match(MYSQLParser::Identifier);
      break;
    }

    case 5: {
      _localctx = dynamic_cast<Db_statementContext *>(_tracker.createInstance<MYSQLParser::Show_tablesContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(82);
      match(MYSQLParser::T__4);
      setState(83);
      match(MYSQLParser::T__7);
      break;
    }

    case 6: {
      _localctx = dynamic_cast<Db_statementContext *>(_tracker.createInstance<MYSQLParser::Show_indexesContext>(_localctx));
      enterOuterAlt(_localctx, 6);
      setState(84);
      match(MYSQLParser::T__4);
      setState(85);
      match(MYSQLParser::T__8);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Io_statementContext ------------------------------------------------------------------

MYSQLParser::Io_statementContext::Io_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MYSQLParser::Io_statementContext::getRuleIndex() const {
  return MYSQLParser::RuleIo_statement;
}

void MYSQLParser::Io_statementContext::copyFrom(Io_statementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Dump_dataContext ------------------------------------------------------------------

tree::TerminalNode* MYSQLParser::Dump_dataContext::String() {
  return getToken(MYSQLParser::String, 0);
}

tree::TerminalNode* MYSQLParser::Dump_dataContext::Identifier() {
  return getToken(MYSQLParser::Identifier, 0);
}

MYSQLParser::Dump_dataContext::Dump_dataContext(Io_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Dump_dataContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDump_data(this);
}
void MYSQLParser::Dump_dataContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDump_data(this);
}

antlrcpp::Any MYSQLParser::Dump_dataContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitDump_data(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Load_dataContext ------------------------------------------------------------------

tree::TerminalNode* MYSQLParser::Load_dataContext::String() {
  return getToken(MYSQLParser::String, 0);
}

tree::TerminalNode* MYSQLParser::Load_dataContext::Identifier() {
  return getToken(MYSQLParser::Identifier, 0);
}

MYSQLParser::Load_dataContext::Load_dataContext(Io_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Load_dataContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoad_data(this);
}
void MYSQLParser::Load_dataContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoad_data(this);
}

antlrcpp::Any MYSQLParser::Load_dataContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitLoad_data(this);
  else
    return visitor->visitChildren(this);
}
MYSQLParser::Io_statementContext* MYSQLParser::io_statement() {
  Io_statementContext *_localctx = _tracker.createInstance<Io_statementContext>(_ctx, getState());
  enterRule(_localctx, 6, MYSQLParser::RuleIo_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(102);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MYSQLParser::T__9: {
        _localctx = dynamic_cast<Io_statementContext *>(_tracker.createInstance<MYSQLParser::Load_dataContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(88);
        match(MYSQLParser::T__9);
        setState(89);
        match(MYSQLParser::T__10);
        setState(90);
        match(MYSQLParser::T__11);
        setState(91);
        match(MYSQLParser::String);
        setState(92);
        match(MYSQLParser::T__12);
        setState(93);
        match(MYSQLParser::T__13);
        setState(94);
        match(MYSQLParser::Identifier);
        break;
      }

      case MYSQLParser::T__14: {
        _localctx = dynamic_cast<Io_statementContext *>(_tracker.createInstance<MYSQLParser::Dump_dataContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(95);
        match(MYSQLParser::T__14);
        setState(96);
        match(MYSQLParser::T__12);
        setState(97);
        match(MYSQLParser::T__11);
        setState(98);
        match(MYSQLParser::String);
        setState(99);
        match(MYSQLParser::T__10);
        setState(100);
        match(MYSQLParser::T__13);
        setState(101);
        match(MYSQLParser::Identifier);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Table_statementContext ------------------------------------------------------------------

MYSQLParser::Table_statementContext::Table_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MYSQLParser::Table_statementContext::getRuleIndex() const {
  return MYSQLParser::RuleTable_statement;
}

void MYSQLParser::Table_statementContext::copyFrom(Table_statementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Delete_from_tableContext ------------------------------------------------------------------

tree::TerminalNode* MYSQLParser::Delete_from_tableContext::Identifier() {
  return getToken(MYSQLParser::Identifier, 0);
}

MYSQLParser::Where_and_clauseContext* MYSQLParser::Delete_from_tableContext::where_and_clause() {
  return getRuleContext<MYSQLParser::Where_and_clauseContext>(0);
}

MYSQLParser::Delete_from_tableContext::Delete_from_tableContext(Table_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Delete_from_tableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDelete_from_table(this);
}
void MYSQLParser::Delete_from_tableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDelete_from_table(this);
}

antlrcpp::Any MYSQLParser::Delete_from_tableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitDelete_from_table(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Insert_into_tableContext ------------------------------------------------------------------

tree::TerminalNode* MYSQLParser::Insert_into_tableContext::Identifier() {
  return getToken(MYSQLParser::Identifier, 0);
}

MYSQLParser::Value_listsContext* MYSQLParser::Insert_into_tableContext::value_lists() {
  return getRuleContext<MYSQLParser::Value_listsContext>(0);
}

MYSQLParser::Insert_into_tableContext::Insert_into_tableContext(Table_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Insert_into_tableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInsert_into_table(this);
}
void MYSQLParser::Insert_into_tableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInsert_into_table(this);
}

antlrcpp::Any MYSQLParser::Insert_into_tableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitInsert_into_table(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Create_tableContext ------------------------------------------------------------------

tree::TerminalNode* MYSQLParser::Create_tableContext::Identifier() {
  return getToken(MYSQLParser::Identifier, 0);
}

MYSQLParser::Field_listContext* MYSQLParser::Create_tableContext::field_list() {
  return getRuleContext<MYSQLParser::Field_listContext>(0);
}

MYSQLParser::Create_tableContext::Create_tableContext(Table_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Create_tableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreate_table(this);
}
void MYSQLParser::Create_tableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreate_table(this);
}

antlrcpp::Any MYSQLParser::Create_tableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitCreate_table(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Describe_tableContext ------------------------------------------------------------------

tree::TerminalNode* MYSQLParser::Describe_tableContext::Identifier() {
  return getToken(MYSQLParser::Identifier, 0);
}

MYSQLParser::Describe_tableContext::Describe_tableContext(Table_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Describe_tableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDescribe_table(this);
}
void MYSQLParser::Describe_tableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDescribe_table(this);
}

antlrcpp::Any MYSQLParser::Describe_tableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitDescribe_table(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Select_table_Context ------------------------------------------------------------------

MYSQLParser::Select_tableContext* MYSQLParser::Select_table_Context::select_table() {
  return getRuleContext<MYSQLParser::Select_tableContext>(0);
}

MYSQLParser::Select_table_Context::Select_table_Context(Table_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Select_table_Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelect_table_(this);
}
void MYSQLParser::Select_table_Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelect_table_(this);
}

antlrcpp::Any MYSQLParser::Select_table_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitSelect_table_(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Drop_tableContext ------------------------------------------------------------------

tree::TerminalNode* MYSQLParser::Drop_tableContext::Identifier() {
  return getToken(MYSQLParser::Identifier, 0);
}

MYSQLParser::Drop_tableContext::Drop_tableContext(Table_statementContext *ctx) { copyFrom(ctx); }

void MYSQLParser::Drop_tableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDrop_table(this);
}
void MYSQLParser::Drop_tableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MYSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDrop_table(this);
}

antlrcpp::Any MYSQLParser::Drop_tableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MYSQLVisitor*>(visitor))
    return parserVisitor->visitDrop_table(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Describe_shadow_tableContext ------------------------------------------------------------------
